Fixed alignment prob

--- a/css/style.css
+++ b/css/style.css
@@ -285,6 +285,8 @@ color:#000;
   background-color: #fff;
   padding: 2px 5px;
   border: 1px solid #E0E0E0;
+  overflow:hidden;
+  height:400px;
 }
 .team-item__img {
   margin-bottom: 20px;
@@ -563,8 +565,15 @@ background: #fff;border: 1px solid #fff;}
 	.modal-lg {
 		width: 1140px;
 	}
-}
 
+}
+@media (max-width:1200px) {
+	
+	.team__item {
+ 
+  height:350px;
+}
+}
 /* Media
 ---------------------------------- */
 .media .fa {
@@ -703,6 +712,7 @@ background: #fff;border: 1px solid #fff;}
         width: 20px;
         height: 20px;
     }
+   
 }
 
 @media (min-width:768px) {
@@ -758,6 +768,13 @@ background: #fff;border: 1px solid #fff;}
 	.fixed-header-on .site-slogan {
 		display: none;
 	}
+
+	
+	.team__item {
+ 
+  height:300px;
+
+}
 }
 
 /* Blocks/Widgets
@@ -865,7 +882,7 @@ margin: 2px 5px 0;}
 	color: #cb2027;
 }
 
-/* Isotope Items
+/* Isotope Items and team media queries
 ---------------------------------- */
 .filters {
 	margin: 0 0 30px 0;
@@ -907,12 +924,29 @@ margin: 2px 5px 0;}
     margin: 7.5px -15px;
     background: #060606;
 }
+
+.team__item{
+	height:470px;
+    }
+}
+@media (max-width:700px) {
+.team__item{
+	height:430px;
+    }
+}
+@media (max-width:560px) {
+.team__item{
+	height:370px;
+    }
 }
 @media (max-width:480px) {
 	.filters .nav-pills > li {
 		width: 100%;
 		display: block;
 	}
+.team__item{
+	height:340px;
+    }
 }
 
 /* Images Overlay
